Fixed minor issue on tablet navigation

--- a/CSS/tablet.css
+++ b/CSS/tablet.css
@@ -17,7 +17,7 @@ nav
 {
     margin:0 auto;
     width:530px;
-    
+    text-align:center;
 }
 
 nav ul
@@ -31,7 +31,7 @@ nav ul
 
 nav ul li
 {
-	margin:0 4px;
+	margin:0 3px;
 }
 
 
